refacore: report refused class changes and unify the plugin hotswap logic